--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "public/AudioProcessor.js"  ]
+    "src",
+    "public/AudioProcessor.js"
+  ]
 }
